--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "license": "ISC",
   "author": "Marina Souza",
   "type": "module",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
